# autoscab

./: .gitignore  README.md  pyproject.toml
autoscab/: _main.py  logger.py  main.py  postbot.py  resume_faker.py  utils.py
autoscab/constants/: agents.py  colors.py  common.py  location.py  locators.py  resume.py  uscities.csv
autoscab/deployments/: __init__.py  deployment.py  fredmeyer.py
autoscab/identity/: identity.py
scripts/: bot.py
