[tool.poetry]
name = "autoscab"
version = "0.1.0"
description = "apply for many of the same job"
authors = ["sneakers-the-rat"]
license = "unlicense"
packages = [
	{ include = "autoscab" }
]

[tool.poetry.dependencies]
python = "^3.8"
certifi = "^2021.10.8"
charset-normalizer = "^2.0.9"
idna = "^3.3"
requests = "^2.26.0"
selenium = "^3"
urllib3 = "^1.26.7"
Faker = "^10.0.0"
webdriver-manager = "^3.5.2"
fpdf = "^1.7.2"
pdf2image = "^1.16.0"
SpeechRecognition = "^3.8.1"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
