[tool.poetry]
name = "autoscab"
version = "0.2.2"
description = "apply for many of the same job"
authors = ["sneakers-the-rat"]
license = "unlicense"
packages = [
	{ include = "autoscab" }
]
include = ['autoscab/constants/uscities.csv']
readme = "README.md"
homepage = "https://github.com/sneakers-the-rat/autoscab"
repository = "https://github.com/sneakers-the-rat/autoscab"
keywords = ['solidarity', 'forever']

[tool.poetry.dependencies]
python = "^3.8"
certifi = "^2021.10.8"
charset-normalizer = "^2.0.9"
idna = "^3.3"
requests = "^2.26.0"
selenium = "^3"
urllib3 = "^1.26.7"
Faker = "^10.0.0"
webdriver-manager = "^3.5.2"
fpdf = "^1.7.2"
pdf2image = "^1.16.0"
SpeechRecognition = "^3.8.1"
pydub = "^0.25.1"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
autoscab = 'autoscab.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
